5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1593_1805.log
== SUBMITION (2019-04-02 00:39:13) 
-- CODE:
xa = float(input("Valor de xa"))
ya = float(input("Valor de ya"))
xb = float(input("Valor de xb"))
yb = float(input("Valor de yb"))

xm = (xa + xb) / 2
ym = (ya + yb) / 2

print(round(xm,1))
print(round(ym,1))
-- EXECUTION TIME:
0.138923
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 00:55:42) 
-- CODE:

xm = (xa + xb) / 2
ym = (ya + yb) / 2

print(round(xm,1))
print(round(ym,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    xm = (xa + xb) / 2
NameError: name 'xa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 00:55:44) 
-- CODE:

xm = (xa + xb) / 2
ym = (ya + yb) / 2

print(round(xm,1))
print(round(ym,1))
-- EXECUTION TIME:
0.190631
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1805/main.py", line 2, in <module>
    xm = (xa + xb) / 2
NameError: name 'xa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 00:56:24) 
-- CODE:
xa = float(input("Valor de xa"))
ya = float(input("Valor de ya"))
xb = float(input("Valor de xb"))
yb = float(input("Valor de yb"))
xm = (xa + xb) / 2
ym = (ya + yb) / 2

print(round(xm,1))
print(round(ym,1))
-- EXECUTION TIME:
0.126533
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:46:55) 
-- CODE:
# Entradas
xa = float(input("Determine: "))
ya = float(input("Determine: "))
xb = float(input("Determine: "))
yb = float(input("Determine: "))
# Variavel
xm = (xb + xa) / 2
ym = (yb + ya) / 2
# Saida
print(round(xm, 1))
print(round(ym, 1))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:47:05) 
-- CODE:
# Entradas
xa = float(input("Determine: "))
ya = float(input("Determine: "))
xb = float(input("Determine: "))
yb = float(input("Determine: "))
# Variavel
xm = (xb + xa) / 2
ym = (yb + ya) / 2
# Saida
print(round(xm, 1))
print(round(ym, 1))
-- EXECUTION TIME:
0.137431
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
